<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <Button
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/sc_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_icon_qr_code"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:text="@string/scan_qr" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_icon_laporan"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:text="@string/daftar_hadir" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/bt_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableStart="@drawable/ic_icon_logout"
        android:layout_gravity="center_horizontal"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/log_out" />

</LinearLayout>